--- a/client/src/components/MainTwo/MainTwo.scss
+++ b/client/src/components/MainTwo/MainTwo.scss
@@ -20,7 +20,6 @@
   height: 75rem;
   width: 100vw;
   color: whitesmoke;
- 
 
   @include tablet {
     height: 71rem;
@@ -46,7 +45,6 @@
   color: white;
   overflow-y: auto;
   overflow-x: hidden;
-  
 
   @include tablet {
     justify-content: flex-start;
@@ -62,7 +60,6 @@
   border: none;
 
   color: white;
-  
 
   @include tablet {
     height: 25rem;
@@ -78,7 +75,6 @@
   border: none;
   color: white;
   font-size: 0.75rem;
-  
 }
 
 .card__wrapper-three {
@@ -245,7 +241,6 @@
     display: flex;
     flex-direction: column;
 
-    
     @include tablet {
       flex-direction: row;
     }
@@ -254,6 +249,9 @@
     }
   }
 }
+
+
+
 
 //   .navbar-absolute {
 //     position: absolute;
@@ -287,7 +285,7 @@
     height: 71rem;
     width: 35rem;
     margin-top: 0.5rem;
-    margin-left: .5rem;
+    margin-left: 0.5rem;
     color: whitesmoke;
     order: 1;
   }
@@ -429,7 +427,6 @@
     display: flex;
     flex-direction: column;
     margin-top: 0;
-    
 
     &__header {
       margin-top: 0.5rem;
@@ -460,4 +457,10 @@
       font-size: 1.1rem;
     }
   }
+}
+
+
+.no-event {
+  color: whitesmoke;
+  display: initial;
 }
