--- a/client/src/components/SideBar/Navbar.scss
+++ b/client/src/components/SideBar/Navbar.scss
@@ -1,18 +1,16 @@
-@import '../../partials/mixins.scss';
-
+@import "../../partials/mixins.scss";
 
 .navbar {
   background-color: #222930;
   height: 5rem;
   display: flex;
- 
+
   align-items: center;
 
   @include desktop {
     height: 5rem;
   }
 }
-
 
 .menu-bars {
   margin-left: 1rem;
@@ -93,7 +91,7 @@ span {
 
 .current-nav-user {
   position: relative;
-  display: flex; 
+  display: flex;
   // box-shadow: 5px 10px 18px #888888;
   text-decoration: none;
   background-color: #222930;
@@ -111,10 +109,8 @@ span {
     padding-left: 17rem;
     height: 4rem;
     padding-bottom: 1rem;
-  }  
-  
-  
-} 
+  }
+}
 
 .nav-link-text {
   color: white;
@@ -125,14 +121,13 @@ span {
 
   @include desktop {
     font-size: 1.5rem;
-    
   }
 }
 
 .current-nav-user-two {
   position: relative;
   display: flex;
-  
+
   // box-shadow: 5px 10px 18px #888888;
   text-decoration: none;
   background-color: #222930;
@@ -148,72 +143,79 @@ span {
     padding-left: 20rem;
     height: 4rem;
     padding-bottom: 1rem;
-  }  
-  
-  
+  }
 }
 
 .current-nav-flex {
   display: flex;
   flex-direction: row-reverse;
   text-align: center;
-  
 }
 
-.current-nav-user-two:hover, .current-nav-user:hover {
+.current-nav-user-two:hover,
+.current-nav-user:hover {
   background-color: #3b74ad;
 }
 
 .logo-transparent {
-  
-    top: 18.5rem;
-    right: 1rem;
-    position: relative;
-    height: 12rem;
-  
+  top: 18.5rem;
+  right: 1rem;
+  position: relative;
+  height: 12rem;
 }
 
 .header__band {
   font-family: "Guaraldo";
-  font-size: .45rem;
+  font-size: 0.45rem;
   margin-top: 3.5rem;
   color: #5d7996;
   position: absolute;
-  right: .25rem;
+  right: 0.25rem;
   top: -1.35rem;
-  
 
   @include tablet {
     font-size: 1rem;
-    
   }
 }
 
 .logout-flex {
   display: flex;
-  position: relative;
-  left: 1.25rem;
-  text-decoration: none;
-  top: 30vh;
+  justify-content: start;
+  align-items: center;
+  padding: 8px 10px 8px 16px;
+  list-style: none;
+  height: 60px;
+  width: 100%;
+  
+  
 }
 
 .logout-text {
-  text-decoration: none;
   color: whitesmoke;
   font-size: 1.05rem;
   z-index: 99999;
-  padding: 8px 0px 8px 16px;
   text-decoration: none;
   color: #f5f5f5;
   font-size: 18px;
-  width: 95%;
+  width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
-  padding: 0 16px;
   border-radius: 4px;
+  list-style: none;
+  position: relative;
+  right: 2rem;
+  
 }
 
-.logout-text a:hover {
+.logout-flex :hover {
   background-color: #3b74ad;
+}
+
+.logout-icon {
+  margin-right: 1rem;
+  position: relative;
+  padding-left: 1rem;
+  
+  
 }
