--- a/client/src/components/SignupLogin/SignupLogin.scss
+++ b/client/src/components/SignupLogin/SignupLogin.scss
@@ -1,7 +1,8 @@
+@import "../../partials/mixins.scss";
 
 html, body {
     background-color: #c3cbdb;
-  height: 100%;
+  
 }
 
 .btn-login {
@@ -106,12 +107,22 @@ html, body {
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
-    width: 25rem;
+    width: 15rem;
     border: none;
     margin-top: .5rem;
     margin-bottom: 0;
+    margin-left: auto;
+    margin-right: auto;
     color: white;
     font-size: 1rem;
+
+    @include tablet {
+        width: 15rem;
+    }
+
+    @include desktop {
+        width: 23rem;
+    }
 }
 
 .profile__card-two {
@@ -120,17 +131,26 @@ html, body {
     box-shadow: 5px 10px 18px #3b74ad;
     border-radius: 1rem;
     height: 35rem;
-    width: 35rem;
+    width: 20rem;
     border: none;
     margin-left: auto;
     margin-right: auto;
     margin-top: 2rem;
     color: white;
     font-size: 1rem;
+
+    @include tablet {
+        width: 33rem;
+    }
 }
 .profile__card-wrapper {
     display: flex;
+    flex-direction: column;
     justify-content: space-evenly;
+
+    @include tablet {
+        flex-direction: row;
+    }
 }
 
 
@@ -166,9 +186,13 @@ html, body {
     flex-direction: column;    
     
     margin-top:2rem;
-    margin-left: 13rem;
+    margin-left: 7.5rem;
     margin-bottom: 1rem;
     width: 25%;
+
+    @include tablet {
+        margin-left: 12.5rem;
+    }
 }
 
 .forgot__need-two {
@@ -210,4 +234,20 @@ ul {
     text-align: left;
     
     
+  }
+
+  .footer__main {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+
+    @include tablet {
+        position: absolute;
+    }
+  }
+
+  .footer__main-one {
+      position: absolute;
+      bottom: 0;
+      width: 100%;
   }
